# twitter_clone

./: .env.template  .flake8  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  nginx.conf  prometheus.yml  pyproject.toml
.github/workflows/: linting.yaml
alembic/: env.py
alembic/versions/: 2024_08_09_1623-8820942de426_create_tables.py  2024_08_13_0051-3549906ecebb_create_tables.py  2024_08_18_2230-6cfe69c5198a_create_tables.py
backend/: Dockerfile
backend/src/: main.py
backend/src/api/dependencies/: user.py
backend/src/core/: __init__.py  base.py  config.py  db_helper.py
backend/src/core/models/: followers.py  likes.py  medias.py  security_key.py  tweets.py  users.py
backend/src/core/schemas/: error_schemas.py  likes_schema.py  tweets_schema.py  users_schema.py
backend/src/utils/: faker_db.py  generator.py  logging_config.py
charts/fastapi/: Chart.yaml  values.yaml
charts/fastapi/templates/: ingress.yaml
charts/fastapi/templates/code/: deployment.yaml  secret.yaml  service.yaml
charts/fastapi/templates/job/: job-migration.yaml  job-secret.yaml
charts/fastapi/templates/nginx/: nginx-deployment.yaml  nginx-pv.yaml  nginx-pvc.yaml  nginx-service.yaml
frontend/: Dockerfile  nginx.conf
frontend/docker_compose/: Dockerfile
k8s/: deployment.yaml  ingress.yaml  insruction.txt  job-migration.yaml  job-secret.yaml  nginx-deployment.yaml  nginx-pv.yaml  nginx-service.yaml  postgres-deployment.yml  postgres-pv.yaml  postgres-pvc.yml  secret.yaml  service.yaml
prod_postgres_data/base/1/: 1259  2619  2619_vm  2696  pg_internal.init
prod_postgres_data/base/5/: 1247  1249  1259  16388  16391  16393  16394  16398  16400  16401  16406  16407  16414  16415  16416  16422  16429  16432  16444  16445  16449  16461  16462  16468  16475  16478  16480  16481  16485  16487  16488  16493  16494  16501  16502  16503  16509  16516  16519  16531  (+41 more)
prod_postgres_data/global/: 1260  pg_control  pg_internal.init
prod_postgres_data/pg_stat/: pgstat.stat
src/: main.py
src/api/dependencies/: user.py
src/core/: __init__.py  base.py  config.py  db_helper.py
src/core/models/: followers.py  likes.py  medias.py  posts.py  security_key.py  tweets.py  users.py
src/core/schemas/: tweets_schema.py
src/utils/: faker_db.py  logging_config.py
static/js/: chunk-vendors.398321e0.js
tests/: Dockerfile  conftest.py  test_media.py  test_tweet.py  test_user.py
(+20 files in other folders)
