[tool.poetry]
name = "twitter-clone"
version = "0.1.0"
description = ""
authors = ["AndrewTarev <153756623+AndrewTarev@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
asyncpg = "^0.29.0"
alembic = "^1.13.2"
black = "^24.4.2"
pydantic-settings = "^2.3.4"
isort = "^5.13.2"
fastapi-cache2 = {extras = ["redis"], version = "^0.2.2"}
gunicorn = "^22.0.0"
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"
flake8 = "^7.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
